[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/wc/lobby/TeamSelection.gd" type="Script" id=1]
[ext_resource path="res://themes/darktheme/darktheme.theme" type="Theme" id=2]

[node name="TeamSelection" type="Panel"]
margin_right = 1920.0
margin_bottom = 1080.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="MainMenu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="MainMenu"]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )

[node name="Outercontainer" type="VBoxContainer" parent="MainMenu"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="LeftRight" type="HBoxContainer" parent="MainMenu/Outercontainer"]
margin_right = 1920.0
margin_bottom = 60.0

[node name="HeroesPanel" type="VBoxContainer" parent="MainMenu/Outercontainer/LeftRight"]
margin_right = 72.0
margin_bottom = 60.0

[node name="HeroesTitle" type="Label" parent="MainMenu/Outercontainer/LeftRight/HeroesPanel"]
margin_right = 72.0
margin_bottom = 23.0
text = "HEROES"

[node name="Heroes" type="GridContainer" parent="MainMenu/Outercontainer/LeftRight/HeroesPanel"]
unique_name_in_owner = true
margin_top = 26.0
margin_right = 72.0
margin_bottom = 26.0
columns = 3

[node name="ScenarioTeamPanel" type="VBoxContainer" parent="MainMenu/Outercontainer/LeftRight"]
margin_left = 75.0
margin_right = 192.0
margin_bottom = 60.0

[node name="ScenarioContainer" type="HBoxContainer" parent="MainMenu/Outercontainer/LeftRight/ScenarioTeamPanel"]
margin_right = 117.0
margin_bottom = 27.0

[node name="ScenarioTitle" type="Label" parent="MainMenu/Outercontainer/LeftRight/ScenarioTeamPanel/ScenarioContainer"]
margin_top = 2.0
margin_right = 76.0
margin_bottom = 25.0
text = "Scenario"

[node name="ScenarioSelect" type="OptionButton" parent="MainMenu/Outercontainer/LeftRight/ScenarioTeamPanel/ScenarioContainer"]
unique_name_in_owner = true
margin_left = 79.0
margin_right = 95.0
margin_bottom = 27.0

[node name="TeamContainer" type="HBoxContainer" parent="MainMenu/Outercontainer/LeftRight/ScenarioTeamPanel"]
unique_name_in_owner = true
margin_top = 30.0
margin_right = 117.0
margin_bottom = 30.0

[node name="ReadyLaunch" type="HBoxContainer" parent="MainMenu/Outercontainer/LeftRight/ScenarioTeamPanel"]
margin_top = 33.0
margin_right = 117.0
margin_bottom = 60.0

[node name="ReadyButton" type="Button" parent="MainMenu/Outercontainer/LeftRight/ScenarioTeamPanel/ReadyLaunch"]
unique_name_in_owner = true
margin_right = 52.0
margin_bottom = 27.0
text = "Ready"

[node name="LaunchButton" type="Button" parent="MainMenu/Outercontainer/LeftRight/ScenarioTeamPanel/ReadyLaunch"]
unique_name_in_owner = true
margin_left = 55.0
margin_right = 117.0
margin_bottom = 27.0
text = "Launch"

[node name="Margin2" type="MarginContainer" parent="MainMenu/Outercontainer"]
margin_top = 63.0
margin_right = 1920.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/margin_top = 90

[node name="Label" type="Label" parent="MainMenu/Outercontainer/Margin2"]
margin_top = 90.0
margin_right = 1920.0
margin_bottom = 113.0
text = "user folder:"
valign = 2

[node name="MenuTween" type="Tween" parent="."]
